@@ -14,6 +14,9 @@ Trunk (unreleased changes)
  3. HADOOP-852.  Add an ant task to compile record definitions, and
     use it to compile record unit tests.  (Milind Bhandarkar via cutting)
 
+ 4. HADOOP-757.  Fix "Bad File Descriptor" exception in HDFS client
+    when an output file is closed twice.  (Raghu Angadi via cutting)
+
 
 Release 0.10.1 - 2007-01-10
 
